React開発環境のプラグイン

--- a/lazy.toml
+++ b/lazy.toml
@@ -1,6 +1,31 @@
 # ------------------------------------ 
 # toml syntax                          
 # ------------------------------------           
-[[plugins]]                                                                                                                                                                                                                                                                           
-repo = 'cespare/vim-toml'                                    
-on_ft = 'toml'    
+[[plugins]]                                                                                      repo = 'cespare/vim-toml'                                    
+on_ft = 'toml'
+
+[[plugins]]
+repo = 'pangloss/vim-javascript'
+on_ft = ['javascript', 'javascript.jsx']
+
+[[plugins]]
+repo = 'maxmellon/vim-jsx-pretty'
+on_ft = ['javascript', 'javascript.jsx']
+
+[[plugins]]
+repo = 'alampros/vim-styled-jsx'
+on_ft = ['javascript', 'javascript.jsx']
+
+[[plugins]]
+repo = 'moll/vim-node'
+on_ft = ['javascript']
+
+[[plugins]]
+repo = 'w0rp/ale.git'
+on_source = ['lightline.vim']
+hook_add = '''
+  let g:ale_statusline_format = ['⨉ %d', '⚠ %d', '']
+  let g:ale_echo_msg_format = '[%linter%] %s'
+  nmap <silent> <C-k> <Plug>(ale_previous_wrap)
+  nmap <silent> <C-j> <Plug>(ale_next_wrap)
+'''
