ファイルツリー（NERDTree)の追加

--- a/lazy.toml
+++ b/lazy.toml
@@ -1,6 +1,9 @@
 # ------------------------------------ 
 # toml syntax                          
 # ------------------------------------           
+[[plugins]]
+repo = 'scrooloose/nerdtree'
+
 [[plugins]]                                                                                      repo = 'cespare/vim-toml'                                    
 on_ft = 'toml'
 
